--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@ asyncpg
 alembic
 psycopg2-binary
 python-multipart
-passlib[bcrypt]
+passlib[argon2]
 python-jose[cryptography]
 SQLAlchemy
+mangum
+argon2-cffi
