--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,6 +10,11 @@
   "routes": [
     {
       "src": "/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://hack02-phase02-l4wx.vercel.app",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
+      },
       "dest": "api/index.py"
     }
   ]
